<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ff0000">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="visible"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:background="@drawable/padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/beranda"
            android:id="@+id/textView147"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:capitalize="characters"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:gravity="center_vertical" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/space"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textIsSelectable="true" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/beranda1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#fff"
            android:textIsSelectable="true"
            android:enabled="true" />

        <TextView
            android:id="@+id/textView133"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/beranda2"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#fff"
            android:textIsSelectable="true"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/beranda3"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#fff"
            android:textIsSelectable="true"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/beranda4"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#fff"
            android:textIsSelectable="true"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/beranda5"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#fff"
            android:textIsSelectable="true"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/beranda6"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#fff"
            android:textIsSelectable="true"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/end"
            android:paddingTop="@dimen/paddingbottom" />

    </LinearLayout>


</ScrollView>