<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tentang_bg">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView5"
        android:src="@drawable/tentang_logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:focusable="false"
        android:linksClickable="false"
        android:longClickable="false"
        android:shadowColor="@android:color/holo_red_light"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffffff"
        android:textIsSelectable="true"
        android:textStyle="bold"
        android:typeface="normal"
        android:layout_below="@+id/imageView5"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView51"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoText="false"
        android:gravity="center_horizontal"
        android:singleLine="true"
        android:text="@string/versi"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffffff"
        android:textStyle="bold|italic"
        android:typeface="serif"
        android:layout_below="@+id/textView8"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView146"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:singleLine="true"
        android:text="@string/exit"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffffff"
        android:textStyle="italic"
        android:typeface="serif"
        android:layout_below="@+id/textView51"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
